Update version and fix sonarlint findings.